fix(layouts): applied tokens

--- a/src/patternfly/layouts/Bullseye/bullseye.scss
+++ b/src/patternfly/layouts/Bullseye/bullseye.scss
@@ -1,6 +1,9 @@
-.#{$bullseye} {
+:where(:root),
+:where(.#{$bullseye}) {
   --#{$bullseye}--Padding: 0;
+}
 
+.#{$bullseye} {
   display: flex;
   align-items: center;
   justify-content: center;
