--- a/src/patternfly/sass-utilities/scss-variables.scss
+++ b/src/patternfly/sass-utilities/scss-variables.scss
@@ -310,15 +310,15 @@ $pf-v5-global--spacer-properties-map: (
 );
 
 // Spacer values
-$pf-v5-global--spacer-map: (
+$pf-v6-global--spacer-map: (
   "auto": "auto",
   "0": 0,
-  "xs": "var(--#{$pf-global}--spacer--xs)",
-  "sm": "var(--#{$pf-global}--spacer--sm)",
-  "md": "var(--#{$pf-global}--spacer--md)",
-  "lg": "var(--#{$pf-global}--spacer--lg)",
-  "xl": "var(--#{$pf-global}--spacer--xl)",
-  "2xl": "var(--#{$pf-global}--spacer--2xl)",
-  "3xl": "var(--#{$pf-global}--spacer--3xl)",
-  "4xl": "var(--#{$pf-global}--spacer--4xl)"
+  "xs": "var(--pf-t--global--spacer--xs)",
+  "sm": "var(--pf-t--global--spacer--sm)",
+  "md": "var(--pf-t--global--spacer--md)",
+  "lg": "var(--pf-t--global--spacer--lg)",
+  "xl": "var(--pf-t--global--spacer--xl)",
+  "2xl": "var(--pf-t--global--spacer--2xl)",
+  "3xl": "var(--pf-t--global--spacer--3xl)",
+  "4xl": "var(--pf-t--global--spacer--4xl)"
 );
