--- a/src/patternfly/layouts/Level/examples/Level.css
+++ b/src/patternfly/layouts/Level/examples/Level.css
@@ -5,8 +5,8 @@
 }
 .ws-core-l-level .pf-v6-l-level__item,
 .ws-core-l-level .pf-v6-l-level {
-  padding: .5rem !important;
-  border: 2px dashed #393f44;
+  padding: var(--pf-t--global--spacer--sm);
+  border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
 .ws-core-l-level .pf-v6-l-level {
   width: 100%;
