--- a/src/patternfly/layouts/Stack/examples/Stack.css
+++ b/src/patternfly/layouts/Stack/examples/Stack.css
@@ -1,7 +1,7 @@
 .ws-core-l-stack .pf-v6-l-stack,
 .ws-core-l-stack .pf-v6-l-stack__item {
-  padding: .5rem !important;
-  border: 2px dashed #393f44;
+  padding: var(--pf-t--global--spacer--sm);
+  border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
 
 .ws-core-l-stack .ws-preview-html {
