--- a/src/patternfly/layouts/Split/examples/Split.css
+++ b/src/patternfly/layouts/Split/examples/Split.css
@@ -1,5 +1,5 @@
-.ws-core-l-split .pf-v5-l-split,
-.ws-core-l-split .pf-v5-l-split__item {
-  padding: .5rem !important;
-  border: 2px dashed #393f44;
+.ws-core-l-split .pf-v6-l-split,
+.ws-core-l-split .pf-v6-l-split__item {
+  padding: var(--pf-t--global--spacer--sm);
+  border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
