--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -350,5 +350,5 @@
 }
 
 select ~ .#{$form-control}__utilities {
---pf-v5-c-form-control__utilities--PaddingRight: 0;
+  --#{$form-control}__utilities--PaddingRight: 0;
 }
